# copyit_aws_demo

./: .gitignore  Dockerfile.base  Dockerfile.run  README.md  copyit_run.sh  copyit_run_aws_batch.sh
copyit_pkg/: pyproject.toml
copyit_pkg/src/copyit/: __init__.py  copyit.py
test/: s3_setup.sh
